@@ -1,3 +1,8 @@
+2015-03-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-common.c (c_common_nodes_and_builtins): Don't call xstrdup
+	on record_builtin_type argument.
+
 2015-03-10  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/65120
